App/web/src/Common/Components/Popup.css
.Popup {
	display: grid;
	grid-template-areas:
	'controls'
	'display';

	grid-template-rows: auto 1fr;
	
	position: absolute;
	left: 50%;
	top: 50%;
	transform: translate(-50%, -50%);

	background-color: var(--control-background);
	border: 0.1px solid var(--control-background);
	border-radius: var(--radius);
	box-shadow: 0px 0px 5px 5px gray;
	
	min-width: fit-content;

	max-height: 100vh;
	max-width: 100vw;
}

.controls {
	display: grid;
	background-color: var(--control-background);
	padding: var(--margin-small);
	border-radius: inherit;
	grid-template-areas: 'title buttons';
	grid-template-columns: 1fr auto;
	gap: var(--margin)
}

.title {
	font-size: large;
	font-weight: bold;
}

.buttons {
	display: grid;
	place-content: end;
	gap: var(--margin)
}

.buttons .Button {
	color: var(--color);
	font-size: xx-small;
	padding: 0.5em;
	border: 1px solid var(--control-background-pressed);
}

.display {
	padding: var(--margin);
	background-color: var(--alt-color);
	border-radius: inherit;
	border-start-start-radius: 0;
	border-start-end-radius: 0;

	display: grid;
	grid-auto-flow: row;
	gap: var(--margin);
	place-items: center;

	max-height: 100%;
	max-width: 100%;
	overflow: auto;
}

.Popup .Input {
	display: grid;
	grid-template-areas: 
	'label ...'
	'error error';
	grid-template-columns: 1fr 1fr;
}

.Popup Form {
	grid-template-areas:
	'body'
	'buttons';
}

.Popup Form .widgets {
	flex-direction: column;
	grid-area: body;
}

.Popup Form .buttonBar {
	grid-area: buttons;
	gap: var(--margin);
}

.Input div.error {
	grid-area: error;
}

.Input label {
	grid-area: label;
}

.Input.Radio .Group {
	display: flex;
	gap: var(--margin);
}

.Input.Radio .Group div {
	display: grid;
	grid-template-columns: auto 1fr;
	gap: var(--margin-small);
}
.Input.Radio .Group div * {
	grid-column: unset;
	grid-row: unset;
}

